force-app/main/default/objects/Pro_File_Upload_Config__mdt/fields/Attach_to_Content__c.field-meta.xml
<CustomField>
    <fullName>Attach_to_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attach to Content</label>
    <type>Checkbox</type>
</CustomField>