force-app/main/default/objects/Pro_File_Upload_Config__mdt/fields/Formats_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Formats_Accepted__c</fullName>
    <label>Formats Accepted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSV</fullName>
                <default>true</default>
                <label>CSV</label>
            </value>
            <value>
                <fullName>XLSX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>