force-app/main/default/objects/Pro_File_Upload_Config__mdt/fields/Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Retention_Days__c</fullName>
    <label>Retention Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>