force-app/main/default/objects/Pro_File_Upload_Config__mdt/fields/Sample_File_ID__c.field-meta.xml
<CustomField>
    <fullName>Sample_File_ID__c</fullName>
    <label>Sample File ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>