force-app/main/default/objects/Pro_File_Upload_Config__mdt/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send  Email</label>
    <type>Checkbox</type>
</CustomField>