force-app/main/default/objects/Pro_File_Upload_Config__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>